прокрутка вверх, плавный скролл, pageup.scss, index, script, up.svg

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,8 @@
 </head>
 
 <body>
-    <section class="promo">
+    <!-- задаем уник идентификатор для использования иконки прокрутки id="up"-->
+    <section id="up" class="promo">
         <!-- верстаем флексами, не использую колоночную сетку бутстрапа, поэтому создаем один контейнер с информацией -->
         <div class="container">
             <!-- создаем по БЕМу блок header -->
@@ -604,6 +605,12 @@
             <div class="modal__descr">Наш менеджер свяжется с вами в ближайшее время!</div>
         </div>
     </div>
+
+    <!-- плавный скрол и элемент вверх -->
+    <!-- создаем уник идентификатор "#up" -->
+    <a href="#up" class="pageup">
+        <img src="icons/up.svg" alt="up">
+    </a>
 
     <!-- подключение слайдера 1-й вар-->
     <!-- сначала подкл библиотеку jquery, потом сам слайдер js/slick.min.js и потом собств файл скрипта js/script.js в котором будут записаны разл настройки слайдера -->
