анимация иконки сердце и отзывов, animation.scss, wow.min.js, index, script,

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/tiny-slider.css"> -->
     <!-- 3-й вар слайдера bootstrap-->
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
+    <!-- ссылка для подключ библиот анимации -->
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -85,7 +87,8 @@
                     </div>
                 </div>
                 <div class="advantages__item">
-                    <img src="icons/advantages/heart.png" alt="heart" class="advantages__icon">
+                <!-- advantages__icon_animated - присваив идентификатор для создания анимации иконки скрдца -->
+                    <img src="icons/advantages/heart.png" alt="heart" class="advantages__icon advantages__icon_animated">
                     <div class="advantages__subtitle">
                         Заботимся о здоровье
                     </div>
@@ -510,7 +513,9 @@
     <section class="feed">
         <div class="container">
             <h2 class="title">отзывы клиентов</h2>
-            <div class="feed__item">
+            <!--fadeInUp animated- задаем анимацию для отзывов из библиотеки анимации -->
+            <!-- data-wow-duration="2s" data-wow-delay="5s" - дата атрибут для анимации WOW, задержка появления отзыва при пролистовании -->
+            <div class="feed__item fadeInUp wow data-wow-duration="2s" data-wow-delay="1s" ">
                 <img src="img/feed_1.png" alt="Ирина Иванченко" class="feed__img">
                 <div class="feed__text">
                     <div class="feed__subtitle">Ирина Иванченко</div>
@@ -521,7 +526,7 @@
                     </div>
                 </div>
             </div>
-            <div class="feed__item">
+            <div class="feed__item fadeInUp wow data-wow-duration="2s" data-wow-delay="1s"">
                 <img src="img/feed_2.png" alt="Иван Сёмочкин" class="feed__img">
                 <div class="feed__text">
                     <div class="feed__subtitle">Иван Сёмочкин</div>
@@ -532,7 +537,7 @@
                     </div>
                 </div>
             </div>
-            <div class="feed__item">
+            <div class="feed__item fadeInUp wow data-wow-duration="2s" data-wow-delay="1s"">
                 <img src="img/feed_3.png" alt="Юлия Дашкина" class="feed__img">
                 <div class="feed__text">
                     <div class="feed__subtitle">Юлия Дашкина</div>
@@ -632,6 +637,8 @@
     <script src="js/jquery.validate.min.js"></script>
     <!-- подключаем плагин для маски ввода номера телефона на сайте -->
     <script src="js/jquery.maskedinput.min.js"></script>
+    <!-- поключаем скрипт для анимации отзывов -->
+    <script src="js/wow.min.js"></script>
     <!-- прописывае путь обращения к файлу script.js -->
     <script src="js/script.js"></script>
 </body>
